--- a/hotel-frontend/package.json
+++ b/hotel-frontend/package.json
@@ -64,6 +64,7 @@
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.21",
+    "eslint": "^9.37.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.14",
     "typescript": "^5",
